--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: "Lato","Helvetica","Arial",sans-serif;
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
 }
